--- a/manifest.json
+++ b/manifest.json
@@ -11,14 +11,14 @@
   "dir": "rtl",
   "icons": [
     {
-      "src": "557336055_807558208323486_5861684320627297371_n.jpg",
+      "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/icon-192.png?alt=media&token=8d29fc43-51ea-45f3-a41a-10b8f2e0d9cf",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/png"
     },
     {
-      "src": "557336055_807558208323486_5861684320627297371_n.jpg",
+      "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/icon-192.png?alt=media&token=8d29fc43-51ea-45f3-a41a-10b8f2e0d9cf",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png"
     }
   ]
 }
