--- a/manifest.json
+++ b/manifest.json
@@ -12,13 +12,13 @@
   "scope": "/",
   "icons": [
     {
-      "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/Gemini_Generated_Image_4wnx844wnx844wnx.png?alt=media&token=a10c597c-9643-4169-93c0-40b30cedbed5",
+  "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/icon-192.png?alt=media&token=8d29fc43-51ea-45f3-a41a-10b8f2e0d9cf",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/Gemini_Generated_Image_4wnx844wnx844wnx.png?alt=media&token=a10c597c-9643-4169-93c0-40b30cedbed5",
+  "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/icon-192.png?alt=media&token=8d29fc43-51ea-45f3-a41a-10b8f2e0d9cf",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -27,7 +27,7 @@
   "categories": ["government", "politics", "utilities"],
   "screenshots": [
     {
-      "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/Gemini_Generated_Image_4wnx844wnx844wnx.png?alt=media&token=a10c597c-9643-4169-93c0-40b30cedbed5",
+  "src": "https://firebasestorage.googleapis.com/v0/b/messageemeapp.appspot.com/o/icon-192.png?alt=media&token=8d29fc43-51ea-45f3-a41a-10b8f2e0d9cf",
       "sizes": "540x720",
       "type": "image/png"
     }
